# mellstroy

./: .gitignore  CMakeLists.txt  main.cpp
include/Algorithms/: Connectivity.hpp  DFS.hpp  Metrics.hpp
include/App/: CLI.hpp
include/Core/: IGenerator.hpp  IGraphStorage.hpp  IMetric.hpp  ISerializer.hpp
include/Factories/: GeneratorFactory.hpp  MetricFactory.hpp  SerializerFactory.hpp
include/Generators/: AdvancedGenerators.hpp  BasicGenerators.hpp  CompleteGraph.hpp  SimpleGenerators.hpp
include/IO/Parsers/: AdjacencyMatrixParser.hpp  DIMACSParser.hpp  EdgeListParser.hpp
include/IO/Serializers/: GraphVizSerializer.hpp  Program4YouSerializer.hpp
include/Implementations/: Generators.hpp  Metrics.hpp  Serializers.hpp
include/Storage/: AdjacencyListStorage.hpp  AdjacencyMatrixStorage.hpp
include/graphcore/: graph.hpp
src/graphcore/: graph.cpp
tests/: test_graph.cpp  test_parsers.cpp
